third_party/WebKit/Source/core/layout/line/LineBreaker.cpp
@@ -68,9 +68,11 @@ InlineIterator LineBreaker::NextLineBreak(InlineBidiResolver& resolver,
 
   bool applied_start_width = resolver.GetPosition().Offset() > 0;
 
+  bool is_first_formatted_line =
+      line_info.IsFirstLine() && block_.CanContainFirstFormattedLine();
   LineWidth width(
       block_, line_info.IsFirstLine(),
-      RequiresIndent(line_info.IsFirstLine(),
+      RequiresIndent(is_first_formatted_line,
                      line_info.PreviousLineBrokeCleanly(), block_.StyleRef()));
 
   SkipLeadingWhitespace(resolver, line_info, width);
